2008-04-10  Andy Wingo  <wingo@unquote>

	* == Released guile-gnome-platform version 2.15.97 ==

2008-04-10  Andy Wingo  <wingo@unquote>

	* NEWS: Update NEWS.

2007-12-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.96 ==

2007-12-06  Andy Wingo  <wingo@pobox.com>

	* doc/pango/defuns-*.texi: Regenerated.
	* doc/pangocairo/defuns-*.texi: Regenerated.

	* doc/pangocairo/guile-gnome-pango.texi (Top): 
	* doc/pangocairo/undocumented.texi:
	* doc/pango/guile-gnome-pango.texi (Top): 
	* doc/pango/undocumented.texi: New section for undocumented
	exports.

2007-11-25  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/pango-spec.scm (global-declarations-cg): Fix a typo.

	* doc/pangocairo/guile-gnome-pangocairo.texi (Top): 
	* doc/pango/guile-gnome-pango.texi (Top): Type and function index.

	* tests/pango/wrapset.api: 
	* tests/pangocairo/wrapset.api: Update for changes resulting from
	API review.

	* doc/pango/defuns-*.xml.texi: 
	* doc/pangocairo/defuns-*.xml.texi: Regenerated for function
	removal, type wrapping, and type wrapper name changes.

	* gnome/overrides/pangocairo.defs (CairoFontMap): Wrap type.

	* gnome/overrides/pango.defs: Wrap more types, ignore some more
	functions.

	* gnome/gw/pango-spec.scm (initialize): Wrap some more freeable
	pointers.

2007-11-24  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/pango.defs: Ignore a few more functions.

	* gnome/gw/pango-spec.scm (initialize): Wrap PangoCoverage as a
	refcounted pointer. Wrap PangoRectangle as a structure,
	represented on the Scheme side by a vector of four integers, as
	with GdkRectangle (but without a GType).

	* gnome/gw/Makefile.am (libgw_guile_gnome_pango_la_SOURCES): 
	* gnome/gw/pango-support.h: 
	* gnome/gw/pango-support.c: New files, add support code to the
	wrapper. 

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* package.ac: 