@@ -1,3 +1,8 @@
+2008-04-24  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/pango-support.c (scm_pango_rectangle_to_scm)
+	(GET_VINT): Fix deprecation warnings.
+
 2008-04-10  Andy Wingo  <wingo@unquote>
 
 	* == Released guile-gnome-platform version 2.15.97 ==
